# auto-vectorization

./: .gitignore  CMakeLists.txt  README.md  bench_fixtures.hpp  bench_scalar.cpp  bench_vec.cpp  findfirst_avx512.cpp  functions.hpp
godbolt/: godbolt_compact.cpp  godbolt_find.cpp  godbolt_matmul.cpp  godbolt_rgb.cpp
presentation/: speed_for_free.odp  speed_for_free.ods  speed_for_free_no_anim.odp
test/: test_compact.cpp  test_find.cpp  test_mult.cpp  test_rgb.cpp
